WexGit/Wex_DX/force-app/main/default/objects/Field_Mapping_Child__mdt/Field_Mapping_Child__mdt.object-meta.xml
<CustomObject>
    <description>used for more dynamic field mapping. specifically created for Partner BOCA to Prospect, but should also be useful for other functionality. Child is the child (this will usually be the field api name mapped to a different field)</description>
    <label>Field Mapping Child</label>
    <pluralLabel>Field Mapping Children</pluralLabel>
</CustomObject>