WexGit/Wex_DX/force-app/main/default/objects/Field_Mapping_Child__mdt/fields/Destination_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Destination_Field_API_Name__c</fullName>
    <description>name of the field we are mapping to. this could be an api name or a class/inner class variable name</description>
    <label>Destination Field API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>