WexGit/Wex_DX/force-app/main/default/objects/Field_Mapping_Child__mdt/fields/Disable_Field__c.field-meta.xml
<CustomField>
    <fullName>Disable_Field__c</fullName>
    <defaultValue>false</defaultValue>
    <description>delete a field from the mapping if it is no longer needed, but disable it if it is only temporarily not needed</description>
    <label>Disable Field</label>
    <type>Checkbox</type>
</CustomField>