WexGit/Wex_DX/force-app/main/default/objects/Field_Mapping_Child__mdt/fields/Field_Mapping_Parent__c.field-meta.xml
<CustomField>
    <fullName>Field_Mapping_Parent__c</fullName>
    <label>Field Mapping Parent</label>
    <referenceTo>Field_Mapping_Parent__mdt</referenceTo>
    <relationshipLabel>Field Mapping Children</relationshipLabel>
    <relationshipName>Field_Mapping_Children</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>